fixed issue with null action

--- a/OpenTelemetry.Instrumentation.Digma.csproj
+++ b/OpenTelemetry.Instrumentation.Digma.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PackageId>OpenTelemetry_Instrumentation_Digma</PackageId>
-    <Version>0.0.1</Version>
+    <PackageId>OpenTel.Instrumentation.Digma</PackageId>
+    <Version>0.0.2</Version>
     <Authors>Digma Team</Authors>
     <Company>Digma</Company>
     <TargetFramework>net6.0</TargetFramework>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+
 
     <RootNamespace>OpenTelemetry.Instrumentation.Digma</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -13,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="LICENSE" Pack="true" PackagePath="LICENSE" />
     <PackageReference Include="OpenTelemetry" Version="1.2.0-rc2" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc*" />
   </ItemGroup>
