--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: brandedoutcast/publish-nuget@v2.5.5
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: .
+          PROJECT_FILE_PATH: ./OpenTelemetry.Instrumentation.Digma.csproj
           # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
            # API key to authenticate with NuGet server
           NUGET_KEY:  ${{ secrets.NUGET_PAT }}
