--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
   publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      ProjectFile: ./OpenTelemetry.Instrumentation.Digma.csproj
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,18 +34,22 @@ jobs:
         id: package_version
         uses: KageKirin/set-csproj-version@v0
         with:
-          file: ./OpenTelemetry.Instrumentation.Digma.csproj
+          file: $ProjectFile
           version: ${{ steps.tag.outputs.tag }}
 
       # Runs a single command using the runners shell
-      - name: Publish NuGet
-        uses: brandedoutcast/publish-nuget@v2.5.5
+      
+      - name: Package
+        run: dotnet pack -c Release -o $ProjectFile
+        
+      - name: Publish
+        run: dotnet nuget push *.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
+      
+      - name: commit new version file
+        uses: stefanzweifel/git-auto-commit-action@v4.14.0
         with:
-          # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: ./OpenTelemetry.Instrumentation.Digma.csproj
-          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-           # API key to authenticate with NuGet server
-          NUGET_KEY:  ${{ secrets.NUGET_PAT }}
-          VERSION_STATIC: ${{ steps.tag.outputs.tag }}
-          TAG_COMMIT: false
+          # Commit message
+          commit_message: "bump version"
+          # Commit options (eg. --no-verify)
+          branch: main
   
