--- a/OpenTelemetry.Instrumentation.Digma.csproj
+++ b/OpenTelemetry.Instrumentation.Digma.csproj
@@ -15,9 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="LICENSE" Pack="true" PackagePath="LICENSE"/>
-    <PackageReference Include="OpenTelemetry" Version="1.2.0-rc4"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc*"/>
+    <None Include="LICENSE" Pack="true" PackagePath="LICENSE" />
+    <PackageReference Include="OpenTelemetry" Version="1.3.0-beta.1" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.3" />
   </ItemGroup>
 
 </Project>
