--- a/OpenTelemetry.Instrumentation.Digma.csproj
+++ b/OpenTelemetry.Instrumentation.Digma.csproj
@@ -16,8 +16,8 @@
 
   <ItemGroup>
     <None Include="LICENSE" Pack="true" PackagePath="LICENSE"/>
-    <PackageReference Include="OpenTelemetry" Version="1.3.0-beta.1"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.3"/>
+    <PackageReference Include="OpenTelemetry" Version="1.2.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.2" />
   </ItemGroup>
 
 </Project>
