updated packable property

--- a/OpenTelemetry.Instrumentation.Digma.csproj
+++ b/OpenTelemetry.Instrumentation.Digma.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <IsPackable>true</IsPackable>
     <PackageId>OpenTel.Instrumentation.Digma</PackageId>
     <Version>0.5.9</Version>
     <Authors>Digma Team</Authors>
