--- a/.github/workflows/package-Digma.MassTransit.Integration.yml
+++ b/.github/workflows/package-Digma.MassTransit.Integration.yml
@@ -40,12 +40,12 @@ jobs:
         run: dotnet test src/${{env.PROJECT}}
         
       
-      - name: update version in csproj
-        id: package_version
-        uses: KageKirin/set-csproj-version@v0
-        with:
-          file: src/${{env.PROJECT}}/${{env.PROJECT}}.csproj
-          version: ${{ steps.tag.outputs.tag }}
+#      - name: update version in csproj
+#        id: package_version
+#        uses: KageKirin/set-csproj-version@v0
+#        with:
+#          file: src/${{env.PROJECT}}/${{env.PROJECT}}.csproj
+#          version: ${{ steps.tag.outputs.tag }}
 
       - name: dotnet pack ${{env.PROJECT}}
         run: dotnet pack src/${{env.PROJECT}} -c Release --no-build
