--- a/.github/workflows/package-Digma.MassTransit.Integration.yml
+++ b/.github/workflows/package-Digma.MassTransit.Integration.yml
@@ -63,9 +63,9 @@ jobs:
           path: '**/${{env.PROJECT}}/bin/**/*.*nupkg'
           
         
-#      - name: Publish
-#        run: dotnet nuget push ./bin/Release/*.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
-#          
+      - name: Publish
+        run: dotnet nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
+
 #      - name: Upload binaries to release
 #        uses: svenstaro/upload-release-action@v2
 #        with:
