--- a/.github/workflows/package-OpenTelemetry.Instrumentation.Digma.yml
+++ b/.github/workflows/package-OpenTelemetry.Instrumentation.Digma.yml
@@ -1,13 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Pack Digma.MassTransit.Integration
+name: Pack OpenTelemetry.Instrumentation.Digma
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     tags:
-      - 'MassTransit.Integration-MT7-*' # trigger when we create a tag with prefix "MassTransit.Integration-"
+      - 'OpenTelemetry.Instrumentation.Digma-*' # trigger when we create a tag with prefix "MassTransit.Integration-"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -16,7 +16,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      PROJECT: Digma.MassTransit.Integration
+      PROJECT: OpenTelemetry.Instrumentation.Digma
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,7 +32,7 @@ jobs:
         id: version
         with:
           value: ${{ steps.tag.outputs.tag }}
-          index_of_str: "MassTransit.Integration-MT7-"
+          index_of_str: "OpenTelemetry.Instrumentation.Digma-"
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
             
@@ -62,14 +62,14 @@ jobs:
           name: ${{env.PROJECT}}-packages
           path: '**/${{env.PROJECT}}/bin/**/*.*nupkg'
         
-#      - name: Publish
-#        run: dotnet nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
+      - name: Publish
+        run: dotnet nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
 
-      - name: commit new version file
-        uses: stefanzweifel/git-auto-commit-action@v4.14.0
-        with:
-          # Commit message
-          commit_message: "bump version"
-          # Commit options (eg. --no-verify)
-          #branch: main
+#      - name: commit new version file
+#        uses: stefanzweifel/git-auto-commit-action@v4.14.0
+#        with:
+#          # Commit message
+#          commit_message: "bump version"
+#          # Commit options (eg. --no-verify)
+#          branch: main
   
