--- a/.github/workflows/package-Digma.MassTransit.Integration.yml
+++ b/.github/workflows/package-Digma.MassTransit.Integration.yml
@@ -64,17 +64,16 @@ jobs:
         
 #      - name: Publish
 #        run: dotnet nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
-    
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+
+      - name: Branch name
+        run: echo running on branch ${GITHUB_REF##*/}
           
-      - name: commit new version file
-        uses: stefanzweifel/git-auto-commit-action@v4.14.0
-        with:
-          # Commit message
-          commit_message: "bump version"
-          # Commit options (eg. --no-verify)
-          branch: ${{ steps.extract_branch.outputs.branch }}
+          
+#      - name: commit new version file
+#        uses: stefanzweifel/git-auto-commit-action@v4.14.0
+#        with:
+#          # Commit message
+#          commit_message: "bump version"
+#          # Commit options (eg. --no-verify)
+#          branch: ${{ steps.extract_branch.outputs.branch }}
   
