--- a/.github/workflows/package-Digma.MassTransit.Integration.yml
+++ b/.github/workflows/package-Digma.MassTransit.Integration.yml
@@ -65,3 +65,12 @@ jobs:
 #      - name: Publish
 #        run: dotnet nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -k ${{ secrets.NUGET_PAT }} -s https://api.nuget.org/v3/index.json
 
+
+      - name: commit new version file
+        uses: stefanzweifel/git-auto-commit-action@v4.14.0
+        with:
+          # Commit message
+          commit_message: "bump version"
+          # Commit options (eg. --no-verify)
+          branch: main
+  
