--- a/.github/workflows/Digma.MassTransit.Integration.yml
+++ b/.github/workflows/Digma.MassTransit.Integration.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: ./.github/pack-action
+      - uses: ./.github/workflows/pack-action
         with:
           project: ${{ env.PROJECT }}
   
