--- a/.github/workflows/Digma.MassTransit.Integration.yml
+++ b/.github/workflows/Digma.MassTransit.Integration.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: ./.github/workflows/pack-action
+        uses: actions/checkout@v3
+      - uses: .github/workflows/pack-action
         with:
           project: ${{ env.PROJECT }}
   
