--- a/.github/workflows/OpenTelemetry.Instrumentation.Digma.yml
+++ b/.github/workflows/OpenTelemetry.Instrumentation.Digma.yml
@@ -16,4 +16,5 @@ jobs:
       - uses: ./.github/workflows/composite/pack
         with:
           project: ${{ env.PROJECT }}
+          nugetapikey: ${{ secrets.NUGET_PAT }}
   
