package name changes

--- a/src/Digma.MassTransit.Integration/Digma.MassTransit.Integration.csproj
+++ b/src/Digma.MassTransit.Integration/Digma.MassTransit.Integration.csproj
@@ -4,7 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>true</IsPackable>
-        <PackageId>Digma.MassTransit.Integration</PackageId>
+        <PackageId>OpenTel.Digma.MassTransit.Integration</PackageId>
         <Version>0.0.1</Version>
         <Authors>Digma Team</Authors>
         <Company>Digma</Company>
