--- a/.github/workflows/Digma.MassTransit.Integration.yml
+++ b/.github/workflows/Digma.MassTransit.Integration.yml
@@ -1,9 +1,10 @@
 name: Pack Digma.MassTransit.Integration
 
 on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_run:
+    workflows: [Pack OpenTelemetry.Instrumentation.Digma]
+    types:
+      - completed
 env:
   PROJECT: Digma.MassTransit.Integration
 jobs:
