--- a/src/Digma.MassTransit.Integration/Digma.MassTransit.Integration.csproj
+++ b/src/Digma.MassTransit.Integration/Digma.MassTransit.Integration.csproj
@@ -4,16 +4,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>true</IsPackable>
-        <PackageId>OpenTel.Digma.MassTransit.Integration</PackageId>
-        <Version>0.6.6</Version>
+        <PackageId>OpenTel.Digma.MassTransit7.Integration</PackageId>
+        <Version>0.0.1</Version>
         <Authors>Digma Team</Authors>
         <Company>Digma</Company>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     </PropertyGroup>
     <ItemGroup>
-      <ProjectReference Include="..\OpenTelemetry.Instrumentation.Digma\OpenTelemetry.Instrumentation.Digma.csproj"/>
+      <ProjectReference Include="..\OpenTelemetry.Instrumentation.Digma\OpenTelemetry.Instrumentation.Digma.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="MassTransit" Version="8.0.5"/>
+      <PackageReference Include="MassTransit" Version="7.3.0" />
     </ItemGroup>
 </Project>
