--- a/src/OpenTelemetry.Instrumentation.Digma/OpenTelemetry.Instrumentation.Digma.csproj
+++ b/src/OpenTelemetry.Instrumentation.Digma/OpenTelemetry.Instrumentation.Digma.csproj
@@ -12,6 +12,7 @@
 
     <RootNamespace>OpenTelemetry.Instrumentation.Digma</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <LangVersion>10</LangVersion>
   </PropertyGroup>
   <ItemGroup>
