--- a/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
+++ b/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Lib.Harmony" Version="2.3.5" />
+      <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
