--- a/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
+++ b/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
@@ -1,14 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net47</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net47;net5.0;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
         <LangVersion>10</LangVersion>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Lib.Harmony" Version="2.3.5" />
-      <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="*" />
+<!--      <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="*" />-->
+    </ItemGroup>
+    
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.2" />
+    </ItemGroup>
+                    
+    <ItemGroup Condition="'$(TargetFramework)' == 'net47'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.2" />
+    </ItemGroup>
+                
+    <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.2" />
+    </ItemGroup>
+                            
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="9.0.2" />
+    </ItemGroup>
+            
+    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="8.0.1" />
+    </ItemGroup>
+        
+    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="8.0.1" />
+    </ItemGroup>
+        
+    <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+        <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.2" />
     </ItemGroup>
 
 </Project>
