--- a/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
+++ b/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <IsPackable>true</IsPackable>
         <TargetFrameworks>netstandard2.0;net47;net5.0;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
         <LangVersion>10</LangVersion>
+        <PackageId>OpenTel.AutoInstrumentation.Digma</PackageId>
+        <RootNamespace>OpenTelemetry.AutoInstrumentation.Digma</RootNamespace>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
