--- a/.github/workflows/packman.yml
+++ b/.github/workflows/packman.yml
@@ -33,6 +33,6 @@ jobs:
           version: ${{ steps.tag.outputs.tag }}
       - uses: ./.github/workflows/composite/pack
         with:
-          project: Digma.AutoInstrumentation.Digma
+          project: OpenTelemetry.AutoInstrumentation.Digma
           nugetapikey: ${{ secrets.NUGET_PAT }}
           version: ${{ steps.tag.outputs.tag }}
