--- a/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
+++ b/src/OpenTelemetry.AutoInstrumentation.Digma/OpenTelemetry.AutoInstrumentation.Digma.csproj
@@ -10,6 +10,7 @@
         <Authors>Digma Team</Authors>
         <Company>Digma</Company>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
 
         <!-- Version placeholder - will be overriden by github action before publishing 
              (see ".github/workflows/composite/pack/action.yml" line 18)-->
