--- a/src/Tests/AutoInstrumentation.IntegrationTests/AutoInstrumentation.IntegrationTests.csproj
+++ b/src/Tests/AutoInstrumentation.IntegrationTests/AutoInstrumentation.IntegrationTests.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     </PropertyGroup>
 
     <ItemGroup>
