--- a/src/Tests/AutoInstrumentation.UnitTests/AutoInstrumentation.UnitTests.csproj
+++ b/src/Tests/AutoInstrumentation.UnitTests/AutoInstrumentation.UnitTests.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <AssemblyName>AutoInstrumentation.UnitTests</AssemblyName>
         <RootNamespace>AutoInstrumentation.UnitTests</RootNamespace>
+        <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     </PropertyGroup>
 
     <ItemGroup>
