--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,17 +13,38 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Setup .NET 5.0
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 5.0.x
+
     - name: Setup .NET 6.0
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
+
+    - name: Setup .NET 7.0
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 7.0.x
+
+    - name: Setup .NET 8.0
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 8.0.x
+
     - name: Setup .NET 9.0
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 9.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal --filter "TestCategory!=Integration"
+
