--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,31 +14,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup .NET 5.0
+    - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 5.0.x
-
-    - name: Setup .NET 6.0
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 6.0.x
-
-    - name: Setup .NET 7.0
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 7.0.x
-
-    - name: Setup .NET 8.0
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 8.0.x
-
-    - name: Setup .NET 9.0
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 9.0.x
-
+        dotnet-version: |
+          5.0.x
+          6.0.x
+          7.0.x
+          8.0.x
+          9.0.x  # if preview is available
+          
     - name: Restore dependencies
       run: dotnet restore
 
@@ -46,5 +31,9 @@ jobs:
       run: dotnet build --no-restore
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal --filter "TestCategory!=Integration"
-
+      run: |
+        dotnet test --framework net5.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
+        dotnet test --framework net6.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
+        dotnet test --framework net7.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
+        dotnet test --framework net8.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
+        dotnet test --framework net9.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
