--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,10 +30,14 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
 
-    - name: Test
+    - name: Test OpenTelemetry.Instrumentation.Digma.Tests
       run: |
-        dotnet test --framework net5.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
-        dotnet test --framework net6.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
-        dotnet test --framework net7.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
-        dotnet test --framework net8.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
-        dotnet test --framework net9.0 --no-build --verbosity normal --filter "TestCategory!=Integration"
+        dotnet test /OpenTelemetry.Instrumentation.Digma.Tests --no-build --verbosity normal
+        
+    - name: Test AutoInstrumentation.UnitTests
+      run: |
+        dotnet test /Tests/AutoInstrumentation.UnitTests --framework net5.0 --no-build --verbosity normal
+        dotnet test /Tests/AutoInstrumentation.UnitTests --framework net6.0 --no-build --verbosity normal
+        dotnet test /Tests/AutoInstrumentation.UnitTests --framework net7.0 --no-build --verbosity normal
+        dotnet test /Tests/AutoInstrumentation.UnitTests --framework net8.0 --no-build --verbosity normal
+        dotnet test /Tests/AutoInstrumentation.UnitTests --framework net9.0 --no-build --verbosity normal
