--- a/src/Tests/AutoInstrumentation.WindowsServiceSampleApp/AutoInstrumentation.WindowsServiceSampleApp.csproj
+++ b/src/Tests/AutoInstrumentation.WindowsServiceSampleApp/AutoInstrumentation.WindowsServiceSampleApp.csproj
@@ -11,9 +11,19 @@
         <PackageReference Include="Serilog.Extensions" Version="8.0.3" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.1-dev-00953" />
         <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\OpenTelemetry.AutoInstrumentation.Digma\OpenTelemetry.AutoInstrumentation.Digma.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="autoinstrumentation.rules.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
