--- a/src/Tests/AutoInstrumentation.ZeroCodeTests/AutoInstrumentation.ZeroCodeTests.csproj
+++ b/src/Tests/AutoInstrumentation.ZeroCodeTests/AutoInstrumentation.ZeroCodeTests.csproj
@@ -11,9 +11,17 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.0.0" />
+        <PackageReference Include="Google.Protobuf" Version="3.30.2" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.70.0" />
+        <PackageReference Include="Grpc.Core" Version="2.46.6" />
+        <PackageReference Include="Grpc.Tools" Version="2.71.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
         <PackageReference Include="MSTest" Version="3.6.4" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.2" />
         <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
     </ItemGroup>
 
@@ -22,6 +30,12 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
-
+    
+    <ItemGroup>
+        <Protobuf ProtoRoot="./" Include="opentelemetry/proto/common/v1/common.proto" Access="public" />
+        <Protobuf ProtoRoot="./" Include="opentelemetry/proto/resource/v1/resource.proto" Access="public" />
+        <Protobuf ProtoRoot="./" Include="opentelemetry/proto/trace/v1/trace.proto" Access="public" />
+        <Protobuf ProtoRoot="./" Include="opentelemetry/proto/collector/trace/v1/trace_service.proto" GrpcServices="True" Access="public" />
+    </ItemGroup>
 
 </Project>
