--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,9 +38,5 @@ jobs:
     - name: Test AutoInstrumentation.UnitTests
       run: |
         dotnet test ./src/Tests/AutoInstrumentation.UnitTests --framework net9.0 --no-build --logger "trx;LogFileName=test_results.trx"
-        dotnet tool install -g trx2junit
-        trx2junit test_results.trx
-    - name: Publish test results to summary
-      uses: test-summary/action@v2
-      with:
-        paths: "TEST-*.xml"
+        dotnet tool install -g trx2gh
+        trx2gh test_results.trx
