--- a/src/Tests/AutoInstrumentation.ConsoleAppNetFramework/AutoInstrumentation.ConsoleAppNetFramework.csproj
+++ b/src/Tests/AutoInstrumentation.ConsoleAppNetFramework/AutoInstrumentation.ConsoleAppNetFramework.csproj
@@ -50,8 +50,8 @@
         </Reference>
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
-        <Reference Include="System.Diagnostics.DiagnosticSource, Version=8.0.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-          <HintPath>..\..\..\packages\System.Diagnostics.DiagnosticSource.8.0.1\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
+        <Reference Include="System.Diagnostics.DiagnosticSource, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+          <HintPath>..\..\..\packages\System.Diagnostics.DiagnosticSource.9.0.0\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
         </Reference>
         <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
           <HintPath>..\..\..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
@@ -93,6 +93,9 @@
         <Project>{90c5c062-4e24-4c16-a1d1-77bde5907267}</Project>
         <Name>OpenTelemetry.AutoInstrumentation.Digma</Name>
       </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+      <Content Include="ILLink\ILLink.Descriptors.LibraryBuild.xml" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
